--- a/package.json
+++ b/package.json
@@ -2,10 +2,14 @@
   "name": "todo-api",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server/server.js",
   "scripts": {
+    "start": "node server/server.js",
     "test": "mocha server/**/*.test.js",
     "test-custom" : "nodemon --exec 'npm test'"
+  },
+  "engines":{
+    "node": "9.2.0"
   },
   "author": "",
   "license": "ISC",
