--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "scripts": {
     "start": "node server/server.js",
     "test": "mocha server/**/*.test.js",
-    "test-custom" : "nodemon --exec 'npm test'"
+    "test-custom": "nodemon --exec 'npm test'"
   },
-  "engines":{
+  "engines": {
     "node": "9.2.0"
   },
   "author": "",
@@ -22,6 +22,7 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
+    "lodash": "^4.17.4",
     "mongodb": "^3.0.1",
     "mongoose": "^4.13.9"
   }
