--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.16.2",
     "lodash": "^4.17.4",
     "mongodb": "^3.0.1",
-    "mongoose": "^4.13.9"
+    "mongoose": "^4.13.9",
+    "validator": "^9.2.0"
   }
 }
